--- a/Freebies/app/src/main/res/layout/activity_main.xml
+++ b/Freebies/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,19 @@
         android:layout_below="@+id/toolbar_actionbar">
 
         <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
-            android:clickable="true" android:layout_height="match_parent" />
+            android:clickable="true" android:layout_height="match_parent" >
+
+            <ImageButton
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:id="@+id/imageButton"
+android:layout_alignParentBottom="true"
+android:layout_alignParentEnd="true"
+android:background="@mipmap/ic_launcher"
+android:onClick="showMessage1"
+                android:layout_gravity="right|bottom" />
+
+        </FrameLayout>
 
         <!-- android:layout_marginTop="?android:attr/actionBarSize"-->
         <fragment android:id="@+id/fragment_drawer"
@@ -20,14 +32,5 @@
             android:layout_height="match_parent" android:layout_gravity="start"
             app:layout="@layout/fragment_navigation_drawer" />
     </android.support.v4.widget.DrawerLayout>
-	
-	<ImageButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/imageButton"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentEnd="true"
-    android:background="@mipmap/ic_launcher"
-    android:onClick="showMessage1" />
-	
+
 </RelativeLayout>
