--- a/Freebies/app/src/main/res/layout/activity_about.xml
+++ b/Freebies/app/src/main/res/layout/activity_about.xml
@@ -9,7 +9,7 @@
     <TextView android:text="@string/about" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="52dp"
-        android:id="@+id/textView"
+        android:id="@+id/textView1"
         android:layout_centerHorizontal="true" />
 
     <TextView
