Added event submission page
Event submission activity
EventInfo class for storing event info

--- a/Freebies/app/src/main/res/layout/activity_main.xml
+++ b/Freebies/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:background="@mipmap/ic_launcher"
-                android:onClick="showMessage1"
+                android:onClick="fabButton"
                 android:layout_gravity="right|bottom" />
 
         </FrameLayout>
