--- a/Freebies/app/src/main/res/layout/activity_main.xml
+++ b/Freebies/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/imageButton"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:background="@mipmap/ic_launcher"
+                android:background="@drawable/fab"
                 android:onClick="fabButton"
                 android:layout_gravity="right|bottom" />
 
