--- a/Freebies/app/src/main/res/values/colors.xml
+++ b/Freebies/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
         http://www.google.com/design/spec/style/color.html#color-ui-color-palette
     -->
 
-    <color name="myPrimaryColor">#2196F3</color>
+    <color name="myPrimaryColor">#3CBFAF</color>
     <color name="myPrimaryDarkColor">#1976D2</color>
     <color name="myAccentColor">#FF4081</color>
     <color name="myDrawerBackground">#FFF</color>
